# Sistema-para-UBS

./: CMakeLists.txt  README.md  funcoesImprimir.h  main.c  structs.h
functions/: fila.c  funcoes.c  funcoesImprimir.c  lista.c  pilha.c  pilhaTimer.c
